journal quick fixes
- removed microblog feed, looked a bit ugly tbh. turned it into an iframe that pops up on the journal!

--- a/website/journal/body.css
+++ b/website/journal/body.css
@@ -85,7 +85,7 @@ p img {
 }
 
 blockquote {
-	font-family: YU gothic UI;
+	font-family: YU gothic UI, var(--fonts);
 	font-size: 16px;
 	font-style: italic;
 	border-left: 2px solid #E4A79D;
