--- a/website/journal/body.css
+++ b/website/journal/body.css
@@ -31,7 +31,7 @@ h3,
 h4,
 h5,
 h6 {
-	font-family: morningtea, newpenji, gaegu-l, var(--fonts);
+	font-family: morningtea, gaegu-l, var(--fonts);
 }
 
 i {
