--- a/website/vgs/body.css
+++ b/website/vgs/body.css
@@ -18,7 +18,7 @@ body {
 }
 
 :root {
-	--fonts: ms pgothic, basiic, arial;
+	--fonts: ms pgothic, arial;
 }
 
 h1,
@@ -29,6 +29,7 @@ h5,
 h6 {
 	font-family: yoster, var(--fonts);
 	letter-spacing: 3px;
+	line-height: normal;
 }
 
 h3,
