website url fixes

--- a/website/blog/light.css
+++ b/website/blog/light.css
@@ -15,7 +15,7 @@ body {
 }
 
 li{
-		list-style-image: url('https://doqmeat.neocities.org/!g/pix/1leaf.png');
+		list-style-image: url('/!g/pix/1leaf.png');
 }
 
 i,
