--- a/website/!f/index-v3.css
+++ b/website/!f/index-v3.css
@@ -187,8 +187,13 @@ footer {
 	}
 
 	main {
+		max-width: 370px;
 		margin-top: 60px;
 		margin-bottom: 30px;
+	}
+
+	footer {
+		max-width: 300px;
 	}
 
 	#rainbow {
