--- a/website/about/index.css
+++ b/website/about/index.css
@@ -25,6 +25,7 @@ body {
 	margin: 0px;
 	font-family: nintendo-ds-bios;
 	color: black;
+	scrollbar-color: #15197B #FE88FA;
 }
 
 li {
@@ -127,6 +128,7 @@ p img {
 
 
 .about {
+	z-index: 2;
 	top: 120px;
 	right: 290px;
 	width: 500px;
@@ -152,6 +154,7 @@ p img {
 }
 
 .secret {
+	z-index: 1;
 	top: 90px;
 	right: 400px;
 	width: 300px;
@@ -163,6 +166,7 @@ p img {
 }
 
 .likes {
+	z-index: 2;
 	bottom: 10px;
 	right: 50px;
 	width: 220px;
@@ -188,6 +192,7 @@ p img {
 }
 
 .dislikes {
+	z-index: 1;
 	bottom: 290px;
 	right: 30px;
 	width: 160px;
