--- a/website/!f/homepage-v3/flower.css
+++ b/website/!f/homepage-v3/flower.css
@@ -192,6 +192,10 @@ button:hover {
 }
 
 #status {
+	font-family: nintendo-ds-bios, var(--fonts);
+	font-size: 16px;
+	word-spacing: 3px;
+	letter-spacing: 1px;
 	background-image: url(/!g/homepage/cloud1.png)
 }
 
@@ -200,8 +204,13 @@ button:hover {
 	text-decoration: none
 }
 
+#status a:hover {
+	letter-spacing: 1px;
+}
+
 #statuscafe {
 	font-family: nintendo-ds-bios, var(--fonts);
+	letter-spacing: 0px;
 	line-height: 25px;
 	font-size: 19px;
 	word-spacing: 5px;
@@ -608,7 +617,7 @@ button:hover {
 }
 
 #s-m-t-tooltip {
-	font-family: var(--fonts);
+	font-family: gaegu-b, var(--fonts);
 	font-size: 15px;
 	max-width: 300px;
 	border-radius: 20px;
