added new font to font page

--- a/website/fonts/stylesheet.css
+++ b/website/fonts/stylesheet.css
@@ -202,3 +202,8 @@
 	font-family: 'oldschool-ad';
 	src: url(old-school-adventures.ttf)
 }
+
+@font-face {
+	font-family: 'momo';
+	src: url(Momos-Regular.ttf)
+}
