--- a/website/guestbook/index.css
+++ b/website/guestbook/index.css
@@ -24,6 +24,26 @@ body {
 	color: white;
 }
 
+a#home {
+	position: absolute;
+	top: -3px;
+	left: 10px;
+	font-family: gaegu-b, var(--fonts);
+	background: url("/!g/pix/lc09-icon-bookmark.gif") no-repeat;
+	background-size: 20px;
+	height: 60px;
+	width: 20px;
+	writing-mode: vertical-rl;
+	padding: 17px 1px;
+	font-size: 13px;
+	color: var(--purple);
+	transition-duration: 0.5s;
+}
+
+a#home:hover {
+	top: 0px;
+}
+
 a {
 	color: var(--lilac);
 	background: white;
