--- a/doqmeat/!f/homepage-v3/flower.css
+++ b/doqmeat/!f/homepage-v3/flower.css
@@ -33,6 +33,11 @@ body {
 	background-size: cover
 }
 
+::selection {
+	color: white;
+	background: var(--d-brown);
+}
+
 .box {
 	border-radius: 10px
 }
