--- a/doqmeat/collection/internet-graphics/internet-stamps.css
+++ b/doqmeat/collection/internet-graphics/internet-stamps.css
@@ -109,7 +109,7 @@ h2 {
 }
 
 body {
-	background: url(bg_ichigo4-3-pk.gif);
+	background: url(strawberry-bg.gif);
 	word-wrap: break-word;
 	font-size: 12px;
 	word-spacing: 8px;
