--- a/doqmeat/!f/homepage-v3/body.css
+++ b/doqmeat/!f/homepage-v3/body.css
@@ -8,7 +8,7 @@
 }
 
 :root {
-	--fonts: ms pgothic, arial;
+	--fonts: ms pgothic, basiic, arial;
 }
 
 body {
@@ -285,6 +285,10 @@ button {
 
 ::-webkit-scrollbar-track {
 	background-color: transparent;
+}
+
+.snowflake {
+	pointer-events: none;
 }
 
 
